--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,7 @@ DB_USERNAME=postgres
 DB_PASSWORD=tu_password
 DB_NAME=restaurant_db
 
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
 TELEGRAM_BOT_TOKEN=tu_token
